--- a/.github/workflows/process-release.yml
+++ b/.github/workflows/process-release.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-tags: true
 
       - name: use node.js 20.x
         uses: actions/setup-node@v4
