--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -58,8 +58,8 @@ jobs:
           npm run build
         env:
           SERVER: ${{needs.detect.outputs.server}}
-          PUBLIC_URL: ${{needs.detect.outputs.branch}}/editor-ui
-          VITE_APP_SETTINGS_PATH: ${{needs.detect.outputs.branch}}/ui/config/editor/editor-settings.toml
+          PUBLIC_URL: /${{needs.detect.outputs.branch}}/editor-ui
+          VITE_APP_SETTINGS_PATH: /${{needs.detect.outputs.branch}}/ui/config/editor/editor-settings.toml
 
       # tests are currently failing
       #- run: npm test
