--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -58,7 +58,7 @@ jobs:
           npm run build
         env:
           SERVER: ${{needs.detect.outputs.server}}
-          PUBLIC_URL: /${{needs.detect.outputs.branch}}/editor-ui
+          PUBLIC_URL: /${{needs.detect.outputs.branch}}
           VITE_APP_SETTINGS_PATH: /${{needs.detect.outputs.branch}}/ui/config/editor/editor-settings.toml
 
       # tests are currently failing
