--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -59,7 +59,7 @@ jobs:
         env:
           SERVER: ${{needs.detect.outputs.server}}
           PUBLIC_URL: /opencast-editor/${{needs.detect.outputs.branch}}
-          VITE_APP_SETTINGS_PATH: /opencast-editor/${{needs.detect.outputs.branch}}/ui/config/editor/editor-settings.toml
+          VITE_APP_SETTINGS_PATH: /opencast-editor/${{needs.detect.outputs.branch}}/editor-settings.toml
 
       # tests are currently failing
       #- run: npm test
