We also want to do this on create as well as push

--- a/.github/workflows/process-release.yml
+++ b/.github/workflows/process-release.yml
@@ -1,5 +1,9 @@
 on:
   workflow_dispatch:
+  create:
+    tags:
+      # CF: 17.x-YYYY-MM-DD
+      - '*.x-*-*-*'
   push:
     tags:
       # CF: 17.x-YYYY-MM-DD
