--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Build App
         run: |
           # This set the editor's datasource to the relevant test server
-          sed -i "s#url.*#url = \'https://$SERVER\'#" public/editor-settings.toml
+          sed -i "s#develop.opencast.org#$SERVER#g" public/editor-settings.toml
           npm run build
         env:
           SERVER: ${{needs.detect.outputs.server}}
