more path fixes

--- a/.github/workflows/update-test.yml
+++ b/.github/workflows/update-test.yml
@@ -61,7 +61,7 @@ jobs:
         env:
           SERVER: ${{needs.detect.outputs.server}}
           PUBLIC_URL: opencast-editor-test/${{ steps.build-path.outputs.build }}
-          VITE_APP_SETTINGS_PATH: /${{ steps.build-path.outputs.build }}/editor-settings.toml
+          VITE_APP_SETTINGS_PATH: /${{ steps.build-path.outputs.build }}editor-settings.toml
 
       - name: Prepare Git
         run: |
