--- a/.github/workflows/update-test.yml
+++ b/.github/workflows/update-test.yml
@@ -36,7 +36,7 @@ jobs:
     needs: detect
     steps:
       - name: generate build path
-        run: echo "::set-output name=build::${{github.event.number}}/$(date +%Y-%m-%d_%H-%M-%S)/" | sed 's_build::/*_build::_'
+        run: echo "build=${{github.event.number}}/$(date +%Y-%m-%d_%H-%M-%S)/" >> $GITHUB_OUTPUT
         id: build-path
 
       - name: Checkout Sources
