--- a/.github/workflows/update-test.yml
+++ b/.github/workflows/update-test.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   detect:
     if: ${{ needs.member.outputs.is_team_member == 'true'
-      || github.event.pull_request.head.repo.full_name == 'opencast/opencast-editor' }}
+      || github.event.pull_request.head.repo.full_name == 'gregorydlogan/opencast-editor' }}
     runs-on: ubuntu-latest
     outputs:
       server: ${{ steps.test-server.outputs.server }}
@@ -87,7 +87,7 @@ jobs:
 
       - name: Clone repository
         run: |
-          git clone "git@github.com:opencast/opencast-editor-test.git" ~/editor-test
+          git clone "git@github.com:gregorydlogan/opencast-editor-test.git" ~/editor-test
           cd ~/editor-test
           git checkout gh-pages
 
@@ -110,7 +110,7 @@ jobs:
       - name: Cleanup test repository
         run: |
           cd ~/editor-test
-          wget https://raw.githubusercontent.com/opencast/opencast-editor-test/main/.github/scripts/cleanup-deployments.sh
+          wget https://raw.githubusercontent.com/gregorydlogan/opencast-editor-test/main/.github/scripts/cleanup-deployments.sh
           bash cleanup-deployments.sh ${{ github.repository_owner }}/opencast-editor
           rm -f cleanup-deployments.sh
           git add .
@@ -132,8 +132,8 @@ jobs:
         with:
           message: >
             This pull request is deployed at
-            [test.editor.opencast.org/${{ steps.build-path.outputs.build }}
-            ](https://test.editor.opencast.org/${{ steps.build-path.outputs.build }}).
+            [test.editor.loganite.ca/${{ steps.build-path.outputs.build }}
+            ](https://test.editor.loganite.ca/${{ steps.build-path.outputs.build }}).
 
             It might take a few minutes for it to become available.
 
