--- a/.github/workflows/process-release.yml
+++ b/.github/workflows/process-release.yml
@@ -9,7 +9,7 @@ name: Create release
 jobs:
   build:
     name: Create release from tag
-    if: github.repository_owner == 'opencast'
+    if: github.repository_owner == 'gregorydlogan'
     runs-on: ubuntu-latest
     outputs:
       checksum: ${{ steps.tarball.outputs.checksum }}
@@ -76,7 +76,7 @@ jobs:
 
   upstream-pr:
     name: Create upstream PR to incorporate release
-    if: github.repository_owner == 'opencast'
+    if: github.repository_owner == 'gregorydlogan'
     runs-on: ubuntu-latest
     needs: build
     permissions:
