--- a/.github/workflows/update-test.yml
+++ b/.github/workflows/update-test.yml
@@ -91,9 +91,7 @@ jobs:
 
       - name: Clone repository
         run: |
-          git clone "git@github.com:${{ github.repository_owner }}/opencast-editor-test.git" ~/editor-test
-          cd ~/editor-test
-          git checkout gh-pages
+          git clone -b gh-pages "git@github.com:${{ github.repository_owner }}/opencast-editor-test.git" editor-test
 
       - name: Store build
         env:
