--- a/.github/workflows/process-release.yml
+++ b/.github/workflows/process-release.yml
@@ -100,9 +100,7 @@ jobs:
 
       - name: Clone upstream repository
         run: |
-          git clone -b ${{ needs.build.outputs.branch }} "git@github.com:${{ github.repository_owner }}/opencast.git" ~/opencast
-          cd ~/opencast
-          git checkout -b t/editor-${{ needs.build.outputs.tag }}
+          git clone -b t/editor-${{ needs.build.outputs.branch }} "git@github.com:${{ github.repository_owner }}/opencast.git" opencast
 
       - name: Update the editor pom file
         working-directory: ~/opencast
