We need to do this in two steps since the branch we want doesn't exist...

--- a/.github/workflows/process-release.yml
+++ b/.github/workflows/process-release.yml
@@ -100,8 +100,8 @@ jobs:
 
       - name: Clone upstream repository
         run: |
-          git clone -b ${{ needs.build.outputs.branch }} "git@github.com:${{ github.repository_owner }}/opencast.git" ~/opencast
-          cd ~/opencast
+          git clone -b ${{ needs.build.outputs.branch }} "git@github.com:${{ github.repository_owner }}/opencast.git" opencast
+          cd opencast
           git checkout -b t/editor-${{ needs.build.outputs.tag }}
 
       - name: Update the editor pom file
