--- a/.github/workflows/process-release.yml
+++ b/.github/workflows/process-release.yml
@@ -105,7 +105,7 @@ jobs:
           git checkout -b t/editor-${{ needs.build.outputs.tag }}
 
       - name: Update the editor pom file
-        working-directory: ~/opencast
+        working-directory: opencast
         run: |
           sed -i "s#<editor.sha256>.*</editor.sha256>#<editor.sha256>${{ needs.build.outputs.checksum }}</editor.sha256>#" modules/editor/pom.xml
           sed -i "s#<editor.url>.*</editor.url>#<editor.url>https://github.com/${{ github.repository_owner }}/opencast-editor/releases/download/${{ needs.build.outputs.tag }}/oc-editor-${{ needs.build.outputs.tag }}.tar.gz</editor.url>#" modules/editor/pom.xml
